# pywellen-mcp

./: .buildinfo  .gitignore  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  deployment.html  export_integration.html  genindex.html  index.html  ivpm.yaml  llm_optimization.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_sources/: deployment.rst.txt  index.rst.txt  llm_optimization.rst.txt
docs/: conf.py  export_integration.rst
scripts/: benchmark.py  security_audit.py
src/pywellen_mcp/: __init__.py  errors.py  server.py  session.py  tools_batch.py  tools_debug.py  tools_export.py  tools_format.py  tools_hierarchy.py  tools_integration.py  tools_llm.py  tools_performance.py  tools_session_state.py  tools_signal.py  tools_waveform.py
tests/unit/: conftest.py  test_errors.py  test_session.py  test_tools_batch.py  test_tools_debug.py  test_tools_export.py  test_tools_format.py  test_tools_hierarchy.py  test_tools_integration.py  test_tools_llm.py  test_tools_performance.py  test_tools_session_state.py  test_tools_signal.py  test_tools_waveform.py
